# ECEN-5763

./: README.md
exercise-1/cross-hair/: Makefile  crosshair  crosshair.cpp
exercise-1/sharpen-psf/: Makefile  sharpen  sharpen_grid  sharpen_grid.c
exercise-1/simpler-capture-4/: Makefile  brighten.cpp  ipcapture.cpp
exercise-2/q1/: frame100.ppm
exercise-2/q2/: Makefile  Sobel_Demo  Sobel_Demo.cpp
exercise-2/q3/: CannyDetector_Demo  CannyDetector_Demo.cpp  Makefile  frame200.ppm
exercise-2/q4/simple-capture/: capture.c
exercise-2/q4/simpler-capture-4/: capture.cpp
exercise-2/q5/: EdgeDetector.cpp  Makefile
exercise-3/q2/: Makefile  houghlines.cpp
exercise-3/q3/: Makefile  houghcircles.cpp
exercise-3/q4/: Makefile  laserspot.cpp
exercise-3/q5/: Makefile  grayscale.cpp
exercise-3/q6/: Makefile  commarker.cpp
exercise-4/q2/: Makefile  houghlines.cpp
exercise-4/q3/: CMakeLists.txt  Makefile  skeletal.cpp
exercise-4/q4/pyramids/: Makefile  Pyramids.cpp
exercise-4/q4/siftDemoV4/: match
exercise-4/q5/: CMakeLists.txt  peopledetect.cpp
exercise-4/q6/: Makefile  my_detector.yml  train_HOG.cpp
exercise-5/laneDetector/: Makefile  houghlines.cpp  houghlines.hpp  lanedetector.cpp  lanedetector.hpp  main.cpp
project/laneDetector/: Makefile
project/laneDetector/inc/: FrameBase.h  Logger.h  RingBuffer.h  Sequencer.h  configuration.h  configuration.hpp  lanedetector.h  lanedetector.hpp  logging.hpp  thread.h  thread.hpp  thread_utils.h  thread_utils.hpp
project/laneDetector/src/: RingBuffer.cpp  Sequencer.cpp  lanedetector.cpp  logging.cpp  (+3 more)
(+2 files in other folders)
